# url-tribunal

./: .env.example  .gitignore  Makefile  README.md  api.Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt
etc/: alembic.ini
src/python/url_tribunal/: utils.py
src/python/url_tribunal/api/: main.py
src/python/url_tribunal/api/v1/: app.py  dependencies.py  errors.py
src/python/url_tribunal/api/v1/schemas/: __init__.py  provider_scan.py  scan.py  url.py
src/python/url_tribunal/api/v1/views/: scan.py  url.py
src/python/url_tribunal/core/: celery.py  config.py  enums.py
src/python/url_tribunal/db/: base.py  session.py
src/python/url_tribunal/db/migrations/: env.py
src/python/url_tribunal/db/migrations/versions/: 1fa03da559b6_add_domain_url_scan_and_provider_scan_.py  55640fe53655_create_domain_url_and_url_scan_tables.py  5e084c3836c2_add_last_scan_id_fk.py
src/python/url_tribunal/db/models/: __init__.py  domain.py  provider_scan.py  scan.py  url.py  url_scan.py
src/python/url_tribunal/db/repositories/: __init__.py  domain.py  provider_scan.py  scan.py  url.py
src/python/url_tribunal/dtos/: __init__.py  domain.py  provider.py  provider_scan.py  scan.py  url.py
src/python/url_tribunal/providers/: __init__.py  base.py  exceptions.py  factory.py  urlscan.py  virustotal.py
