[project]
name = 'url-tribunal'
version = '0.1.0'
description = 'Application for assessing the safety and legitimacy of URLs.'
readme = 'README.md'
requires-python = '>=3.12'
dependencies = [
    'flask==3.1.3',
    'pydantic==2.13.4',
    'pydantic-settings==2.13.0',
    'gunicorn==24.0.0',
    'sqlalchemy==2.0.50',
    'pymysql==1.1.3',
    'alembic==1.18.0',
    'cryptography==47.0.0',
    'httpx==0.28.1',
]

[project.optional-dependencies]
test = [
    'pytest==9.0.1',
    'pytest-cov==6.3.0',
]
dev = [
    'ruff==0.14.5',
    'isort==8.0.0',
]

[tool.ruff]
line-length = 99
target-version = 'py312'

[tool.ruff.format]
quote-style = 'preserve'

[tool.pytest.ini_options]
python_files = ['test_*.py']
python_classes = ['Test*']
python_functions = ['test_*']
addopts = [
    '--cov',
    '--cov-report=term-missing',
]

[tool.coverage.run]
omit = [
    '*/__init__.py',
]
